# simd

./: .travis.yml  Cargo.toml  README.md
doc/: search-index.js
doc/simd/: index.html  struct.bool16i.html  struct.bool16ix8.html  struct.bool32f.html  struct.bool32fx4.html  struct.bool32i.html  struct.bool32ix4.html  struct.bool8i.html  struct.bool8ix16.html  struct.f32x4.html  struct.i16x8.html  struct.i32x4.html  struct.i8x16.html  struct.u16x8.html  struct.u32x4.html  struct.u8x16.html  trait.Simd.html
doc/simd/aarch64/: index.html
doc/simd/aarch64/neon/: Aarch64F32x4.t.html  Aarch64I8x16.t.html  Aarch64U8x16.t.html  f64x1.t.html  i16x4.t.html  i32x2.t.html  i64x1.t.html  i8x8.t.html  index.html  struct.bool64fx2.html  struct.bool64ix2.html  struct.f64x1.html  struct.f64x2.html  struct.i16x4.html  struct.i32x2.html  struct.i64x1.html  struct.i64x2.html  struct.i8x8.html  struct.u16x4.html  struct.u32x2.html  struct.u64x1.html  struct.u64x2.html  struct.u8x8.html  trait.Aarch64F32x4.html  trait.Aarch64I8x16.html  trait.Aarch64U8x16.html
doc/simd/arm/: index.html
doc/simd/arm/neon/: f32x2.t.html  index.html  struct.f32x2.html  struct.i16x4.html  struct.i32x2.html  (+10 more)
doc/simd/v256/: bool16ix16.t.html  bool32ix8.t.html  bool64fx4.t.html  f32x8.t.html  f64x4.t.html  i32x8.t.html  u64x4.t.html  u8x32.t.html
doc/simd/x86/: index.html
doc/src/simd/: common.rs.html  lib.rs.html  sixty_four.rs.html  v256.rs.html
examples/: fannkuch-redux-nosimd.rs  nbody-nosimd.rs  spectral-norm-nosimd.rs
src/: lib.rs  v256.rs
src/x86/: avx.rs  avx2.rs  sse2.rs  sse4_2.rs
(+150 files in other folders)
