[package]
name = "simd"
version = "0.1.1"
authors = ["Huon Wilson <dbau.pp+github@gmail.com>"]

repository = "https://github.com/rust-lang-nursery/simd"
documentation = "https://docs.rs/simd"
license = "MIT/Apache-2.0"
keywords = ["simd", "data-parallel"]
readme = "README.md"

description = """
`simd` offers limited cross-platform access to SIMD instructions on
CPUs, as well as raw interfaces to platform-specific instructions.
"""

[dependencies]
serde = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }

[dev-dependencies]
cfg-if = "0.1"

[features]
doc = []
with-serde = ["serde", "serde_derive"]
