[package]
name = "simd"
version = "0.2.4"  #:version
authors = ["Huon Wilson <dbau.pp+github@gmail.com>"]

repository = "https://github.com/hsivonen/simd"
documentation = "https://docs.rs/simd/"
license = "MIT/Apache-2.0"
keywords = ["simd", "data-parallel"]
readme = "README.md"

description = """
`simd` offers limited cross-platform access to SIMD instructions on
CPUs, as well as raw interfaces to platform-specific instructions.
(To be obsoleted by the `std::simd` implementation RFC 2366.)
"""

[package.metadata.docs.rs]
features = ["doc"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
cfg-if = "0.1"

[features]
doc = []
with-serde = ["serde", "serde_derive"]
